--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto",
   "version": "1.0.0",
-  "description": "Это третья проектная работа в модуле \"Базовый JavaScript\".",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
